Bug 476742 - Tab bar only shows one tab when opening a second tab with Strg+T. Pressing Strg+T a second time to open a third tab shows all three tabs.
Summary: Tab bar only shows one tab when opening a second tab with Strg+T. Pressing St...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.01.75
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-11-09 09:16 UTC by mrfrh
Modified: 2023-11-12 09:19 UTC (History)
4 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mrfrh 2023-11-09 09:16:17 UTC
SUMMARY
On neon-unstable-20231107-1001.iso, the dolphin tab bar only shows one tab when opening a second tab with Strg+T. Pressing Strg+T a second (time to open a third tab) shows all three tabs.

STEPS TO REPRODUCE
1. Open dolphin with a new window (no tab is shown). 
2. Open a second tab with Strg+T: tab bar only shows one tab.
3. Press Strg+T a second time to open a third tab: tab bar shows all three tabs.

OBSERVED RESULT
Step 2: Tab bar only shows one tab.

EXPECTED RESULT
Step 2.: After opening a second tab, the tab bar should immediately show both open tabs (as it does when using the right click "open-in-new-tab" option and as it does in previous dolphin versions).


SOFTWARE/OS VERSIONS

Linux/KDE Plasma:  neon-unstable-20231107-1001.iso
KDE Plasma Version: 5.27.80
KDE Frameworks Version: 5.240.0
Qt Version: 6.6.0

ADDITIONAL INFORMATION
-
Comment 1 Nate Graham 2023-11-09 19:44:25 UTC
Can reproduce.
Comment 2 Bug Janitor Service 2023-11-10 04:43:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/dolphin/-/merge_requests/652
Comment 3 Méven Car 2023-11-12 09:19:17 UTC
Git commit d4e862fb4c34e0d4cb26410e582aff7112a0673b by Méven Car, on behalf of Amol Godbole.
Committed on 12/11/2023 at 09:54.
Pushed by meven into branch 'master'.

DolphinTabWidget: Use tabBarAutoHide property

The tab bar was being hidden manually. Instead, set the tabBarAutoHide
property to true.

M  +2    -10   src/dolphintabwidget.cpp

https://invent.kde.org/system/dolphin/-/commit/d4e862fb4c34e0d4cb26410e582aff7112a0673b