DolphinTabWidget: Use tabBarAutoHide property

The tab bar was being hidden manually. Instead, set the tabBarAutoHide
property to true.

BUG: 476742